--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,6 +6,9 @@
     <title>react-tooltip 1.0.0 Demo</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+
+    </style>
 </head>
 <body>
     <div id="demo"></div>
